添加查询client信息接口