@@ -23,6 +23,10 @@ import java.util.concurrent.ConcurrentHashMap;
  * 使用文档参考:
  * <p>
  * <a href="https://www.baeldung.com/orika-mapping">orika使用文档参考</a>
+ * <p>
+ * 转换中需要使用反射:
+ * // 参考: https://blog.csdn.net/FatalFlower/article/details/122589921
+ * // 由于 JDK 8 中有关反射相关的功能自从 JDK 9 开始就已经被限制了，为了兼容原先的版本，需要在运行项目时添加 --add-opens java.base/java.lang=ALL-UNNAMED 选项来开启这种默认不被允许的行为。
  *
  * @author wangjunming
  * @date 2023/1/18 16:26
